Fixed errors in receiving data in accordance with the HTTP protocol
